lab2a, lab2c fixed

--- a/lab 2/lab_2а_GSFP.ipynb
+++ b/lab 2/lab_2а_GSFP.ipynb
@@ -53,7 +53,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "https://cbonds.ru/bonds/?status_id=5-1z141z4&kind_id=0-2&structured_note=1&order=document&dir=asc"
+        "ссылка 1: https://www.moex.com/ru/issue.aspx?board=TQOB&code=SU26207RMFS9\n",
+        "\n",
+        "ссылка 2: https://cbonds.ru/bonds/?status_id=5-1z141z4&kind_id=0-2&structured_note=1&order=document&dir=asc"
       ]
     },
     {
