lab1 optimize strategy fixed

--- a/lab 1/lab_1_GSFP.ipynb
+++ b/lab 1/lab_1_GSFP.ipynb
@@ -1909,85 +1909,70 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 110,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Оптимальное количество контрактов (коллы и путы):\n",
-            "[-2.27233350e-09 -1.91376846e-09 -1.59291304e-09 -1.26322921e-09\n",
-            " -1.02504958e-09 -7.93755824e-10 -5.98212860e-10 -4.71941241e-10\n",
-            " -3.24535558e-10 -1.99614248e-10 -1.58616581e-10 -1.18215793e-10\n",
-            " -7.84152944e-11 -2.97002955e-11 -3.70406904e-11 -2.03369508e-11\n",
-            " -1.23218533e-11 -6.14767390e-12] [-8.08771665e-12 -1.32662311e-11 -1.97681967e-11 -2.09093493e-11\n",
-            " -3.72674186e-11 -4.72655781e-11 -7.22764132e-11 -1.13134457e-10\n",
-            " -1.53748041e-10 -2.49494791e-10 -2.74240180e-10 -3.77386824e-10\n",
-            " -5.28882300e-10 -6.74432679e-10 -8.81990297e-10 -1.14657873e-09\n",
-            " -1.46624982e-09 -1.78052587e-09]\n",
-            "Стоимость портфеля: -3.006615813162726e-07\n",
-            "Риск при росте цены: -1.1050504998512938e-07\n",
-            "Риск при падении цены: 1.959527293660895e-08\n"
+            "Оптимальный портфель: [ 10.  10.  10.  10.  10. -10. -10. -10. -10. -10. -10. -10. -10. -10.\n",
+            " -10.  10.  10.  10.  10.  10.]\n",
+            "Ожидаемая прибыль: 198.79999999999995\n"
           ]
         }
       ],
       "source": [
-        "from scipy.optimize import minimize\n",
+        "import numpy as np\n",
+        "from scipy.optimize import linprog\n",
         "\n",
+        "# Данные\n",
+        "strikes = np.array([207.5, 210.0, 212.5, 215.0, 217.5, 220.0, 222.5, 225.0, 227.5, 230.0])  # цены страйк\n",
+        "ask_calls = np.array([23.95, 21.60, 19.30, 16.75, 14.60, 12.50, 10.40, 8.90, 6.80, 5.20])  # ask цены колл\n",
+        "bid_calls = np.array([23.15, 19.90, 17.95, 16.10, 13.20, 11.55, 9.35, 7.70, 6.45, 5.05])  # bid цены колл\n",
+        "ask_puts = np.array([0.43, 0.53, 0.67, 0.87, 1.13, 1.49, 2.10, 2.78, 3.85, 5.50])          # ask цены пут\n",
+        "bid_puts = np.array([0.40, 0.50, 0.64, 0.82, 1.08, 1.44, 1.72, 2.36, 3.35, 4.35])          # bid цены пут\n",
         "\n",
-        "S0 = 229.87\n",
-        "x_percent = 10\n",
-        "y_percent = 5\n",
-        "w = 5000\n",
-        "L, U = -10, 10\n",
+        "# Заданные параметры\n",
+        "S_0 = 229.87  # текущая цена актива\n",
+        "S_T = 240  # прогнозируемая цена\n",
+        "L, U = -10, 10  # ограничения на количество контрактов\n",
+        "W = 100  # начальная стоимость\n",
+        "L_max = 50  # лимит убытков\n",
         "\n",
+        "# Формирование целевой функции\n",
+        "payoff_calls = np.maximum(S_T - strikes, 0)\n",
+        "payoff_puts = np.maximum(strikes - S_T, 0)\n",
         "\n",
-        "price_up = S0 * (1 + x_percent / 100)\n",
-        "price_down = S0 * (1 - x_percent / 100)\n",
+        "cost_calls = np.where(payoff_calls > 0, ask_calls, -bid_calls)\n",
+        "cost_puts = np.where(payoff_puts > 0, ask_puts, -bid_puts)\n",
         "\n",
-        "def portfolio_value(x):\n",
-        "    n = len(options)\n",
-        "    call_cost = np.sum(x[:n] * options[\"Calls Ask\"])\n",
-        "    put_cost = np.sum(x[n:] * options[\"Puts Ask\"])\n",
-        "    return call_cost + put_cost\n",
+        "c = -np.hstack([payoff_calls - cost_calls, payoff_puts - cost_puts])  # целевая функция: макс. доход\n",
         "\n",
+        "# Ограничения\n",
+        "A_eq = np.zeros((2, len(c)))\n",
+        "A_eq[0, :len(strikes)] = 1  # сумма коллов\n",
+        "A_eq[1, len(strikes):] = 1  # сумма путов\n",
+        "b_eq = [0, 0]  # начальное условие: нейтральный портфель\n",
         "\n",
-        "def portfolio_payoff(x, S):\n",
-        "    n = len(options)\n",
-        "    payoff_calls = np.sum(x[:n] * np.maximum(S - options[\"Strike\"], 0))\n",
-        "    payoff_puts = np.sum(x[n:] * np.maximum(options[\"Strike\"] - S, 0))\n",
-        "    return payoff_calls + payoff_puts\n",
+        "A_ub = np.vstack([\n",
+        "    c,  # ограничение на убыток\n",
+        "    np.identity(len(c)),  # ограничения по ликвидности\n",
+        "    -np.identity(len(c))\n",
+        "])\n",
+        "b_ub = [L_max] + [U] * len(c) + [-L] * len(c)\n",
         "\n",
+        "# Решение\n",
+        "bounds = [(L, U)] * len(c)\n",
+        "result = linprog(c, A_ub=A_ub, b_ub=b_ub, A_eq=A_eq, b_eq=b_eq, bounds=bounds, method='highs')\n",
         "\n",
-        "def risk_constraints(x):\n",
-        "    max_loss = S0 * (y_percent / 100)\n",
-        "    portfolio_down = portfolio_payoff(x, price_down) - portfolio_value(x)\n",
-        "    portfolio_up = portfolio_payoff(x, price_up) - portfolio_value(x)\n",
-        "    return max_loss - max(-portfolio_down, -portfolio_up)\n",
-        "\n",
-        "def liquidity_constraints(x):\n",
-        "    n = len(options)\n",
-        "    call_constraints = np.abs(x[:n]) - options[\"Calls Volume\"]\n",
-        "    put_constraints = np.abs(x[n:]) - options[\"Puts Volume\"]\n",
-        "    return np.concatenate((call_constraints, put_constraints))\n",
-        "\n",
-        "x0 = np.zeros(len(options) * 2)  # Начальное приближение\n",
-        "bounds = [(L, U) for _ in range(len(options) * 2)]  # Границы для переменных\n",
-        "constraints = [\n",
-        "    {\"type\": \"ineq\", \"fun\": risk_constraints},  # Ограничение риска\n",
-        "    {\"type\": \"ineq\", \"fun\": lambda x: liquidity_constraints(x)}  # Ликвидность\n",
-        "]\n",
-        "\n",
-        "\n",
-        "result = minimize(portfolio_value, x0, bounds=bounds, constraints=constraints)\n",
-        "\n",
-        "\n",
-        "print(\"Оптимальное количество контрактов (коллы и путы):\")\n",
-        "print(result.x[:len(options)], result.x[len(options):])\n",
-        "print(\"Стоимость портфеля:\", portfolio_value(result.x))\n",
-        "print(\"Риск при росте цены:\", portfolio_payoff(result.x, price_up) - portfolio_value(result.x))\n",
-        "print(\"Риск при падении цены:\", portfolio_payoff(result.x, price_down) - portfolio_value(result.x))"
+        "# Вывод\n",
+        "if result.success:\n",
+        "    portfolio = result.x\n",
+        "    print(\"Оптимальный портфель:\", portfolio)\n",
+        "    print(\"Ожидаемая прибыль:\", -result.fun)\n",
+        "else:\n",
+        "    print(\"Не удалось найти решение.\")\n"
       ]
     },
     {
@@ -1995,7 +1980,9 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "\n"
+      ]
     }
   ],
   "metadata": {
